--- a/Kalki Vs KaliPurush Game/KaliPurush.html
+++ b/Kalki Vs KaliPurush Game/KaliPurush.html
@@ -8,10 +8,10 @@
 <p id="status" style="font-size:50px;color:red">Your Status:-</p>
 <p id="name" style="font-size:50px;color:blue">Name:</p>
 <center>
-<h1 style="float:left;width:100px;height:100px;">Kalipurush</h1>
-<img src="C:\Users\\hp\OneDrive\Desktop\kalipurush.jpg" onclick="myfunction()"/>
-<h1 style="float:left;width:100px;height:100px;">Kalki</h1>
-<img src="C:\Users\hp\OneDrive\Desktop\kalki.jpg" onclick="myfunction()"/>
+<h1 style="width:50px;height:50px;">Kalipurush</h1>
+<img src="C:\Users\\hp\OneDrive\Desktop\kalipurush.jpg"  style="width:1000px;height:1000px" onclick="myfunction()"/>
+<h1 style="width:50px;height:50px;">Kalki</h1>
+<img src="C:\Users\hp\OneDrive\Desktop\kalki.jpg" style="width:1000px;height:1000px" onclick="myfunction()"/>
 </center>
 <script>
 var score=0;
